test_suite/tests/ui/default-attribute/enum.stderr
error: #[serde(default)] can only be used on structs with named fields
 --> $DIR/enum.rs:5:1
  |
5 | enum E {
  | ^^^^

error: aborting due to previous error

